OCR callout handled

--- a/force-app/main/default/lwc/fileUploadOCR/fileUploadOCR.html
+++ b/force-app/main/default/lwc/fileUploadOCR/fileUploadOCR.html
@@ -51,6 +51,7 @@
 					<div class="slds-col slds-m-vertical_x-small">
 						<div class='Column2'>
 							<div class="image-parent">
+								<!-- OCR Result Component will be here -->
 								<div class="image-bottom-corner">
 									<img src={einsteinImageUrl} alt="url did't work">
 								</div>
