Show OCR data changes

--- a/force-app/main/default/lwc/fileUploadOCR/fileUploadOCR.html
+++ b/force-app/main/default/lwc/fileUploadOCR/fileUploadOCR.html
@@ -16,7 +16,8 @@
 					<div class="slds-grid slds-m-top_small">
 						<div class="slds-col slds-button-group" role="group">
 							<lightning-button variant="brand" label="Scan image" title="Initiate OCR"
-								onclick={handleScanImageClick} class="slds-m-left_x-small slds-button_brand"></lightning-button>
+								onclick={handleScanImageClick}
+								class="slds-m-left_x-small slds-button_brand"></lightning-button>
 							<lightning-button variant="brand" label="Create New Record" title="Search for Records"
 								onclick={handleSearch} class="slds-m-left_x-small slds-button_brand"></lightning-button>
 							<lightning-button variant="brand" label="Search New Record" title="Create New Record"
@@ -51,17 +52,12 @@
 					<div class="slds-col slds-m-vertical_x-small">
 						<div class='Column2'>
 							<div class="slds-text-body_regular" lwc:if={showCardDetails}>
-								<lightning-formatted-text value="Person : Wilson Ella" ></lightning-formatted-text></br>
-								<lightning-formatted-text value="phone : 98998399,849393939" ></lightning-formatted-text></br>
-								<lightning-formatted-text value="email : wilson_ella@fedorabank.com" ></lightning-formatted-text></br>
-								<lightning-formatted-text value="Website : www.fedora.com" ></lightning-formatted-text></br>
-								<lightning-formatted-text value="ID : dfsd322dfd" ></lightning-formatted-text></br>
-								<lightning-formatted-text value="image number : 3432323" ></lightning-formatted-text></br>
-								<div class="image-parent">
+								<c-scanned-text-data scannedresult={scannedResult}></c-scanned-text-data>
+							</div>
+							<div class="image-parent">
 								<!-- OCR Result Component will be here -->
-									<div class="image-bottom-corner">
-										<img src={einsteinImageUrl} alt="url did't work">
-									</div>
+								<div class="image-bottom-corner">
+									<img src={einsteinImageUrl} alt="url did't work">
 								</div>
 							</div>
 						</div>
