--- a/force-app/main/default/lwc/showData/showData.html
+++ b/force-app/main/default/lwc/showData/showData.html
@@ -49,7 +49,7 @@
   <br></br>
   <div class="slds-text-longform">
     <h1 class="slds-text-heading_large slds-text-align_center">Welcome to Visionary</h1>
-    <h2 class="slds-text-heading_medium slds-text-align_center">An OCR Based Searching & Object Creation Tool For Salesforce</h2>
+    <h2 class="slds-text-heading_small slds-text-align_center">An OCR Based Searching & Object Creation Tool For Salesforce</h2>
     <div class="image-child">
 			<img src={firstColumnImageUrl} alt="url did't work" style="width: 600px; height: 400px;">
 		</div> 
