parent child communication code added

--- a/force-app/main/default/lwc/fileUploadOCR/fileUploadOCR.html
+++ b/force-app/main/default/lwc/fileUploadOCR/fileUploadOCR.html
@@ -18,9 +18,9 @@
 							<lightning-button variant="brand" label="Scan image" title="Initiate OCR"
 								onclick={handleScanImageClick}
 								class="slds-m-left_x-small slds-button_brand"></lightning-button>
-							<lightning-button variant="brand" label="Create New Record" title="Search for Records"
+							<lightning-button variant="brand" label="Search Record" title="Search for Records"
 								onclick={handleSearch} class="slds-m-left_x-small slds-button_brand"></lightning-button>
-							<lightning-button variant="brand" label="Search New Record" title="Create New Record"
+							<lightning-button variant="brand" label="Create New Record" title="Create New Record"
 								onclick={handleCreate} class="slds-m-left_x-small slds-button_brand"></lightning-button>
 						</div>
 					</div>
