--- a/force-app/main/default/lwc/oCRParent/oCRParent.html
+++ b/force-app/main/default/lwc/oCRParent/oCRParent.html
@@ -1,6 +1,5 @@
 <template>
-    <lightning-card>
-        
-        <c-show-Data></c-show-Data>
-    </lightning-card>
+    <c-file-upload-o-c-r onbuttonpress={handleButtonPress}></c-file-upload-o-c-r>
+    <span class="slds-m-top_small"><br></span>
+    <c-show-Data></c-show-Data>
 </template>
