changes added to show data

--- a/force-app/main/default/lwc/oCRParent/oCRParent.html
+++ b/force-app/main/default/lwc/oCRParent/oCRParent.html
@@ -1,6 +1,6 @@
 <template>
     <lightning-card>
-        
+        <c-file-upload-o-c-r></c-file-upload-o-c-r>
         <c-show-Data></c-show-Data>
     </lightning-card>
 </template>
