--- a/force-app/main/default/lwc/showData/showData.html
+++ b/force-app/main/default/lwc/showData/showData.html
@@ -20,9 +20,9 @@
     </header>
   </div>
   <div class="slds-card__body">
-    <lightning-datatable key-field="id" data={data} columns={columns}></lightning-datatable>
+    <lightning-datatable key-field="id" data={columnData} columns={columns}></lightning-datatable>
   </div>
-  <div class="slds-card__header slds-grid">
+  <!--div class="slds-card__header slds-grid">
     <header class="slds-media slds-media_center slds-has-flexi-truncate">
       <div class="slds-media__figure">
         <span class="slds-icon_container slds-icon-standard-contact" title="contact">
@@ -43,7 +43,7 @@
   </div>
   <div class="slds-card__body">
     <lightning-datatable key-field="id" data={data} columns={columns}></lightning-datatable>
-  </div>
+  </div-->
 </article>
 <lightning-card lwc:else>
   <br></br>
